src/objects/ACCL__Product_Assortment__c.object
<CustomObject>
    <description>Holds the details of a set of products which are often used together.</description>
    <fields>
        <fullName>ACCL__Description_Language_1__c</fullName>
        <description>Holds the description of language 1.</description>
        <label>Description Language 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_2__c</fullName>
        <description>Holds the description of language 2.</description>
        <label>Description Language 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_3__c</fullName>
        <description>Holds the description of language 3.</description>
        <label>Description Language 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description__c</fullName>
        <description>Description based on the user specific language.</description>
        <formula>CASE($User.ACCL__Language_Postfix__c,
&quot;Language1&quot;, ACCL__Description_Language_1__c,
&quot;Language2&quot;, BLANKVALUE(ACCL__Description_Language_2__c,ACCL__Description_Language_1__c),
&quot;Language3&quot;, BLANKVALUE(ACCL__Description_Language_3__c,ACCL__Description_Language_1__c),
&quot;Language4&quot;, BLANKVALUE(ACCL__Description_Language_4__c,ACCL__Description_Language_1__c),
ACCL__Description_Language_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Distribution__c</fullName>
        <description>Target Value for primary survey question &apos;Distribution&apos;.</description>
        <label>Distribution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Distributed</fullName>
                </value>
                <value>
                    <fullName>Not Distributed</fullName>
                </value>
                <value>
                    <fullName>Out of Stock</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Facings__c</fullName>
        <description>Fancings value.</description>
        <label>Facings</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Listing_Module__c</fullName>
        <description>Listing Module value.</description>
        <label>Listing Module</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Base Module</fullName>
                    <default>true</default>
                    <label>Base Module</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Number_Of_Modules__c</fullName>
        <description>Field to control that the maximum number of Listing_Modules__c related to the product assortment is not higher than 10.</description>
        <label>Number Of Modules</label>
        <summaryForeignKey>ACCL__Listing_Module__c.ACCL__Product_Assortment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ACCL__Obligatory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes whether this is a closed listing. Used by the system.</description>
        <inlineHelpText>Relevant only for Assortment List, to define closed listing.</inlineHelpText>
        <label>Obligatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Price_Survey__c</fullName>
        <description>Price Survey value.</description>
        <label>Price Survey</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Product_Assortment_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to product assortment template.</description>
        <label>Product Assortment Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ACCL__Product_Assortment_Template__c.ACCL__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACCL__Product_Assortment_Template__c</referenceTo>
        <relationshipLabel>Product Assortments</relationshipLabel>
        <relationshipName>Product_Assortments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Sales_Org__c</fullName>
        <description>Describes the sales org which the product assortment belongs to.</description>
        <formula>TEXT(ACCL__Product_Assortment_Template__r.ACCL__Sales_Org__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Valid_From__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>From this date on the entry is valid.</description>
        <label>Valid From</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Valid_Thru__c</fullName>
        <defaultValue>DATE(2099,12,31)</defaultValue>
        <description>Until this date the entry is valid.</description>
        <label>Valid Thru</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Version_Off_Platform_APL__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Stores off platform version number of Account product list.</description>
        <label>Version Off Platform APL</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Version__c</fullName>
        <description>Stores version number of Authorization list.</description>
        <label>Version</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDLZ_ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Product Assortment</label>
    <listViews>
        <fullName>ACCL__All</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Description__c</columns>
        <columns>ACCL__Product_Assortment_Template__c</columns>
        <columns>ACCL__Valid_From__c</columns>
        <columns>ACCL__Valid_Thru__c</columns>
        <columns>ACCL__Sales_Org__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Product Assortment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Assortments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ACCL__Prevent_Product_Assortment_Template</fullName>
        <active>true</active>
        <description>The Product Assorment Template can&apos;t be edited after Product Assortment creation.</description>
        <errorConditionFormula>ISCHANGED(ACCL__Product_Assortment_Template__c  )</errorConditionFormula>
        <errorMessage>The Product Assorment Template can&apos;t be edited after Product Assortment creation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Valid_From_Valid_Thru_Validation</fullName>
        <active>true</active>
        <description>Valid From can&apos;t be later than Valid Thru.</description>
        <errorConditionFormula>ACCL__Valid_From__c  &gt;  ACCL__Valid_Thru__c</errorConditionFormula>
        <errorMessage>Valid From can&apos;t be later than Valid Thru.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Valid_Version_Off_Platform_Of_Version</fullName>
        <active>true</active>
        <description>Validates new Version Off Platform should not be more than the existing Version.</description>
        <errorConditionFormula>ACCL__Version__c &lt; ACCL__Version_Off_Platform_APL__c</errorConditionFormula>
        <errorMessage>Updating Version Off Platform should not be more than existing Version.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Validate_Version_Off_Platform_APL</fullName>
        <active>true</active>
        <description>Validates new Version Off Platform should not be less than the existing Version Off Platform.</description>
        <errorConditionFormula>OR(ACCL__Version_Off_Platform_APL__c &lt; PRIORVALUE(ACCL__Version_Off_Platform_APL__c),
          AND(ISBLANK(ACCL__Version_Off_Platform_APL__c), NOT(ISBLANK(PRIORVALUE(ACCL__Version_Off_Platform_APL__c)))))</errorConditionFormula>
        <errorMessage>Updating Version Off Platform should not be prior to the existing Version Off Platform.</errorMessage>
    </validationRules>
</CustomObject>